parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    THEN
    UNTIL

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM LBRACE declarations statements RBRACE
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> declaration
Rule 4     declarations -> empty
Rule 5     declaration -> type var_list SEMICOLON
Rule 6     var_list -> var_list COMMA IDENTIFIER
Rule 7     var_list -> var_list COMMA IDENTIFIER ASSIGN expression
Rule 8     var_list -> IDENTIFIER
Rule 9     var_list -> IDENTIFIER ASSIGN expression
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    type -> BOOL
Rule 13    statements -> statements statement
Rule 14    statements -> statement
Rule 15    statements -> empty
Rule 16    statement -> assignment
Rule 17    statement -> if_statement
Rule 18    statement -> while_statement
Rule 19    statement -> do_while_statement
Rule 20    statement -> write_statement
Rule 21    statement -> read_statement
Rule 22    statement -> block
Rule 23    statement -> increment
Rule 24    statement -> decrement
Rule 25    assignment -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 26    increment -> IDENTIFIER PLUS PLUS SEMICOLON
Rule 27    decrement -> IDENTIFIER MINUS MINUS SEMICOLON
Rule 28    if_statement -> IF expression block else_part FI
Rule 29    if_statement -> IF expression statement else_part FI
Rule 30    else_part -> ELSE block
Rule 31    else_part -> ELSE statement
Rule 32    else_part -> empty
Rule 33    while_statement -> WHILE expression LBRACE statements RBRACE
Rule 34    do_while_statement -> DO LBRACE statements RBRACE WHILE LPAREN expression RPAREN SEMICOLON
Rule 35    write_statement -> WRITE expression SEMICOLON
Rule 36    read_statement -> READ IDENTIFIER SEMICOLON
Rule 37    block -> LBRACE statements RBRACE
Rule 38    expression -> expression PLUS expression
Rule 39    expression -> expression MINUS expression
Rule 40    expression -> expression TIMES expression
Rule 41    expression -> expression DIVIDE expression
Rule 42    expression -> expression EQ expression
Rule 43    expression -> expression LT expression
Rule 44    expression -> expression GT expression
Rule 45    expression -> expression LE expression
Rule 46    expression -> expression GE expression
Rule 47    expression -> expression NE expression
Rule 48    expression -> expression AND expression
Rule 49    expression -> expression OR expression
Rule 50    expression -> MINUS expression
Rule 51    expression -> NOT expression
Rule 52    expression -> LPAREN expression RPAREN
Rule 53    expression -> NUMBER
Rule 54    expression -> IDENTIFIER
Rule 55    expression -> TRUE
Rule 56    expression -> FALSE
Rule 57    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
ASSIGN               : 7 9 25
BOOL                 : 12
COMMA                : 6 7
DIVIDE               : 41
DO                   : 34
ELSE                 : 30 31
EQ                   : 42
FALSE                : 56
FI                   : 28 29
FLOAT                : 11
GE                   : 46
GT                   : 44
IDENTIFIER           : 6 7 8 9 25 26 27 36 54
IF                   : 28 29
INT                  : 10
LBRACE               : 1 33 34 37
LE                   : 45
LPAREN               : 34 52
LT                   : 43
MINUS                : 27 27 39 50
NE                   : 47
NOT                  : 51
NUMBER               : 53
OR                   : 49
PLUS                 : 26 26 38
PROGRAM              : 1
RBRACE               : 1 33 34 37
READ                 : 36
RPAREN               : 34 52
SEMICOLON            : 5 25 26 27 34 35 36
THEN                 : 
TIMES                : 40
TRUE                 : 55
UNTIL                : 
WHILE                : 33 34
WRITE                : 35
error                : 

Nonterminals, with rules where they appear

assignment           : 16
block                : 22 28 30
declaration          : 2 3
declarations         : 1 2
decrement            : 24
do_while_statement   : 19
else_part            : 28 29
empty                : 4 15 32
expression           : 7 9 25 28 29 33 34 35 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 52
if_statement         : 17
increment            : 23
program              : 0
read_statement       : 21
statement            : 13 14 29 31
statements           : 1 13 33 34 37
type                 : 5
var_list             : 5 6 7
while_statement      : 18
write_statement      : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM LBRACE declarations statements RBRACE

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . LBRACE declarations statements RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) program -> PROGRAM LBRACE . declarations statements RBRACE
    (2) declarations -> . declarations declaration
    (3) declarations -> . declaration
    (4) declarations -> . empty
    (5) declaration -> . type var_list SEMICOLON
    (57) empty -> .
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . BOOL

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    IDENTIFIER      reduce using rule 57 (empty -> .)
    IF              reduce using rule 57 (empty -> .)
    WHILE           reduce using rule 57 (empty -> .)
    DO              reduce using rule 57 (empty -> .)
    WRITE           reduce using rule 57 (empty -> .)
    READ            reduce using rule 57 (empty -> .)
    LBRACE          reduce using rule 57 (empty -> .)
    RBRACE          reduce using rule 57 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10

  ! INT             [ reduce using rule 57 (empty -> .) ]
  ! FLOAT           [ reduce using rule 57 (empty -> .) ]
  ! BOOL            [ reduce using rule 57 (empty -> .) ]

    declarations                   shift and go to state 4
    declaration                    shift and go to state 5
    empty                          shift and go to state 6
    type                           shift and go to state 7

state 4

    (1) program -> PROGRAM LBRACE declarations . statements RBRACE
    (2) declarations -> declarations . declaration
    (13) statements -> . statements statement
    (14) statements -> . statement
    (15) statements -> . empty
    (5) declaration -> . type var_list SEMICOLON
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_while_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (23) statement -> . increment
    (24) statement -> . decrement
    (57) empty -> .
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . BOOL
    (25) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (28) if_statement -> . IF expression block else_part FI
    (29) if_statement -> . IF expression statement else_part FI
    (33) while_statement -> . WHILE expression LBRACE statements RBRACE
    (34) do_while_statement -> . DO LBRACE statements RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (35) write_statement -> . WRITE expression SEMICOLON
    (36) read_statement -> . READ IDENTIFIER SEMICOLON
    (37) block -> . LBRACE statements RBRACE
    (26) increment -> . IDENTIFIER PLUS PLUS SEMICOLON
    (27) decrement -> . IDENTIFIER MINUS MINUS SEMICOLON

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
    RBRACE          reduce using rule 57 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10
    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    WRITE           shift and go to state 29
    READ            shift and go to state 30
    LBRACE          shift and go to state 11

  ! IDENTIFIER      [ reduce using rule 57 (empty -> .) ]
  ! IF              [ reduce using rule 57 (empty -> .) ]
  ! WHILE           [ reduce using rule 57 (empty -> .) ]
  ! DO              [ reduce using rule 57 (empty -> .) ]
  ! WRITE           [ reduce using rule 57 (empty -> .) ]
  ! READ            [ reduce using rule 57 (empty -> .) ]
  ! LBRACE          [ reduce using rule 57 (empty -> .) ]

    statements                     shift and go to state 12
    declaration                    shift and go to state 13
    statement                      shift and go to state 14
    empty                          shift and go to state 15
    type                           shift and go to state 7
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_while_statement             shift and go to state 19
    write_statement                shift and go to state 20
    read_statement                 shift and go to state 21
    block                          shift and go to state 22
    increment                      shift and go to state 23
    decrement                      shift and go to state 24

state 5

    (3) declarations -> declaration .

    INT             reduce using rule 3 (declarations -> declaration .)
    FLOAT           reduce using rule 3 (declarations -> declaration .)
    BOOL            reduce using rule 3 (declarations -> declaration .)
    IDENTIFIER      reduce using rule 3 (declarations -> declaration .)
    IF              reduce using rule 3 (declarations -> declaration .)
    WHILE           reduce using rule 3 (declarations -> declaration .)
    DO              reduce using rule 3 (declarations -> declaration .)
    WRITE           reduce using rule 3 (declarations -> declaration .)
    READ            reduce using rule 3 (declarations -> declaration .)
    LBRACE          reduce using rule 3 (declarations -> declaration .)
    RBRACE          reduce using rule 3 (declarations -> declaration .)


state 6

    (4) declarations -> empty .

    INT             reduce using rule 4 (declarations -> empty .)
    FLOAT           reduce using rule 4 (declarations -> empty .)
    BOOL            reduce using rule 4 (declarations -> empty .)
    IDENTIFIER      reduce using rule 4 (declarations -> empty .)
    IF              reduce using rule 4 (declarations -> empty .)
    WHILE           reduce using rule 4 (declarations -> empty .)
    DO              reduce using rule 4 (declarations -> empty .)
    WRITE           reduce using rule 4 (declarations -> empty .)
    READ            reduce using rule 4 (declarations -> empty .)
    LBRACE          reduce using rule 4 (declarations -> empty .)
    RBRACE          reduce using rule 4 (declarations -> empty .)


state 7

    (5) declaration -> type . var_list SEMICOLON
    (6) var_list -> . var_list COMMA IDENTIFIER
    (7) var_list -> . var_list COMMA IDENTIFIER ASSIGN expression
    (8) var_list -> . IDENTIFIER
    (9) var_list -> . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 32

    var_list                       shift and go to state 31

state 8

    (10) type -> INT .

    IDENTIFIER      reduce using rule 10 (type -> INT .)


state 9

    (11) type -> FLOAT .

    IDENTIFIER      reduce using rule 11 (type -> FLOAT .)


state 10

    (12) type -> BOOL .

    IDENTIFIER      reduce using rule 12 (type -> BOOL .)


state 11

    (37) block -> LBRACE . statements RBRACE
    (13) statements -> . statements statement
    (14) statements -> . statement
    (15) statements -> . empty
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_while_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (23) statement -> . increment
    (24) statement -> . decrement
    (57) empty -> .
    (25) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (28) if_statement -> . IF expression block else_part FI
    (29) if_statement -> . IF expression statement else_part FI
    (33) while_statement -> . WHILE expression LBRACE statements RBRACE
    (34) do_while_statement -> . DO LBRACE statements RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (35) write_statement -> . WRITE expression SEMICOLON
    (36) read_statement -> . READ IDENTIFIER SEMICOLON
    (37) block -> . LBRACE statements RBRACE
    (26) increment -> . IDENTIFIER PLUS PLUS SEMICOLON
    (27) decrement -> . IDENTIFIER MINUS MINUS SEMICOLON

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
    RBRACE          reduce using rule 57 (empty -> .)
    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    WRITE           shift and go to state 29
    READ            shift and go to state 30
    LBRACE          shift and go to state 11

  ! IDENTIFIER      [ reduce using rule 57 (empty -> .) ]
  ! IF              [ reduce using rule 57 (empty -> .) ]
  ! WHILE           [ reduce using rule 57 (empty -> .) ]
  ! DO              [ reduce using rule 57 (empty -> .) ]
  ! WRITE           [ reduce using rule 57 (empty -> .) ]
  ! READ            [ reduce using rule 57 (empty -> .) ]
  ! LBRACE          [ reduce using rule 57 (empty -> .) ]

    statements                     shift and go to state 33
    statement                      shift and go to state 14
    empty                          shift and go to state 15
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_while_statement             shift and go to state 19
    write_statement                shift and go to state 20
    read_statement                 shift and go to state 21
    block                          shift and go to state 22
    increment                      shift and go to state 23
    decrement                      shift and go to state 24

state 12

    (1) program -> PROGRAM LBRACE declarations statements . RBRACE
    (13) statements -> statements . statement
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_while_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (23) statement -> . increment
    (24) statement -> . decrement
    (25) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (28) if_statement -> . IF expression block else_part FI
    (29) if_statement -> . IF expression statement else_part FI
    (33) while_statement -> . WHILE expression LBRACE statements RBRACE
    (34) do_while_statement -> . DO LBRACE statements RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (35) write_statement -> . WRITE expression SEMICOLON
    (36) read_statement -> . READ IDENTIFIER SEMICOLON
    (37) block -> . LBRACE statements RBRACE
    (26) increment -> . IDENTIFIER PLUS PLUS SEMICOLON
    (27) decrement -> . IDENTIFIER MINUS MINUS SEMICOLON

    RBRACE          shift and go to state 34
    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    WRITE           shift and go to state 29
    READ            shift and go to state 30
    LBRACE          shift and go to state 11

    statement                      shift and go to state 35
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_while_statement             shift and go to state 19
    write_statement                shift and go to state 20
    read_statement                 shift and go to state 21
    block                          shift and go to state 22
    increment                      shift and go to state 23
    decrement                      shift and go to state 24

state 13

    (2) declarations -> declarations declaration .

    INT             reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)
    BOOL            reduce using rule 2 (declarations -> declarations declaration .)
    IDENTIFIER      reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    WHILE           reduce using rule 2 (declarations -> declarations declaration .)
    DO              reduce using rule 2 (declarations -> declarations declaration .)
    WRITE           reduce using rule 2 (declarations -> declarations declaration .)
    READ            reduce using rule 2 (declarations -> declarations declaration .)
    LBRACE          reduce using rule 2 (declarations -> declarations declaration .)
    RBRACE          reduce using rule 2 (declarations -> declarations declaration .)


state 14

    (14) statements -> statement .

    RBRACE          reduce using rule 14 (statements -> statement .)
    IDENTIFIER      reduce using rule 14 (statements -> statement .)
    IF              reduce using rule 14 (statements -> statement .)
    WHILE           reduce using rule 14 (statements -> statement .)
    DO              reduce using rule 14 (statements -> statement .)
    WRITE           reduce using rule 14 (statements -> statement .)
    READ            reduce using rule 14 (statements -> statement .)
    LBRACE          reduce using rule 14 (statements -> statement .)


state 15

    (15) statements -> empty .

    RBRACE          reduce using rule 15 (statements -> empty .)
    IDENTIFIER      reduce using rule 15 (statements -> empty .)
    IF              reduce using rule 15 (statements -> empty .)
    WHILE           reduce using rule 15 (statements -> empty .)
    DO              reduce using rule 15 (statements -> empty .)
    WRITE           reduce using rule 15 (statements -> empty .)
    READ            reduce using rule 15 (statements -> empty .)
    LBRACE          reduce using rule 15 (statements -> empty .)


state 16

    (16) statement -> assignment .

    RBRACE          reduce using rule 16 (statement -> assignment .)
    IDENTIFIER      reduce using rule 16 (statement -> assignment .)
    IF              reduce using rule 16 (statement -> assignment .)
    WHILE           reduce using rule 16 (statement -> assignment .)
    DO              reduce using rule 16 (statement -> assignment .)
    WRITE           reduce using rule 16 (statement -> assignment .)
    READ            reduce using rule 16 (statement -> assignment .)
    LBRACE          reduce using rule 16 (statement -> assignment .)
    ELSE            reduce using rule 16 (statement -> assignment .)
    FI              reduce using rule 16 (statement -> assignment .)


state 17

    (17) statement -> if_statement .

    RBRACE          reduce using rule 17 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 17 (statement -> if_statement .)
    IF              reduce using rule 17 (statement -> if_statement .)
    WHILE           reduce using rule 17 (statement -> if_statement .)
    DO              reduce using rule 17 (statement -> if_statement .)
    WRITE           reduce using rule 17 (statement -> if_statement .)
    READ            reduce using rule 17 (statement -> if_statement .)
    LBRACE          reduce using rule 17 (statement -> if_statement .)
    ELSE            reduce using rule 17 (statement -> if_statement .)
    FI              reduce using rule 17 (statement -> if_statement .)


state 18

    (18) statement -> while_statement .

    RBRACE          reduce using rule 18 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 18 (statement -> while_statement .)
    IF              reduce using rule 18 (statement -> while_statement .)
    WHILE           reduce using rule 18 (statement -> while_statement .)
    DO              reduce using rule 18 (statement -> while_statement .)
    WRITE           reduce using rule 18 (statement -> while_statement .)
    READ            reduce using rule 18 (statement -> while_statement .)
    LBRACE          reduce using rule 18 (statement -> while_statement .)
    ELSE            reduce using rule 18 (statement -> while_statement .)
    FI              reduce using rule 18 (statement -> while_statement .)


state 19

    (19) statement -> do_while_statement .

    RBRACE          reduce using rule 19 (statement -> do_while_statement .)
    IDENTIFIER      reduce using rule 19 (statement -> do_while_statement .)
    IF              reduce using rule 19 (statement -> do_while_statement .)
    WHILE           reduce using rule 19 (statement -> do_while_statement .)
    DO              reduce using rule 19 (statement -> do_while_statement .)
    WRITE           reduce using rule 19 (statement -> do_while_statement .)
    READ            reduce using rule 19 (statement -> do_while_statement .)
    LBRACE          reduce using rule 19 (statement -> do_while_statement .)
    ELSE            reduce using rule 19 (statement -> do_while_statement .)
    FI              reduce using rule 19 (statement -> do_while_statement .)


state 20

    (20) statement -> write_statement .

    RBRACE          reduce using rule 20 (statement -> write_statement .)
    IDENTIFIER      reduce using rule 20 (statement -> write_statement .)
    IF              reduce using rule 20 (statement -> write_statement .)
    WHILE           reduce using rule 20 (statement -> write_statement .)
    DO              reduce using rule 20 (statement -> write_statement .)
    WRITE           reduce using rule 20 (statement -> write_statement .)
    READ            reduce using rule 20 (statement -> write_statement .)
    LBRACE          reduce using rule 20 (statement -> write_statement .)
    ELSE            reduce using rule 20 (statement -> write_statement .)
    FI              reduce using rule 20 (statement -> write_statement .)


state 21

    (21) statement -> read_statement .

    RBRACE          reduce using rule 21 (statement -> read_statement .)
    IDENTIFIER      reduce using rule 21 (statement -> read_statement .)
    IF              reduce using rule 21 (statement -> read_statement .)
    WHILE           reduce using rule 21 (statement -> read_statement .)
    DO              reduce using rule 21 (statement -> read_statement .)
    WRITE           reduce using rule 21 (statement -> read_statement .)
    READ            reduce using rule 21 (statement -> read_statement .)
    LBRACE          reduce using rule 21 (statement -> read_statement .)
    ELSE            reduce using rule 21 (statement -> read_statement .)
    FI              reduce using rule 21 (statement -> read_statement .)


state 22

    (22) statement -> block .

    RBRACE          reduce using rule 22 (statement -> block .)
    IDENTIFIER      reduce using rule 22 (statement -> block .)
    IF              reduce using rule 22 (statement -> block .)
    WHILE           reduce using rule 22 (statement -> block .)
    DO              reduce using rule 22 (statement -> block .)
    WRITE           reduce using rule 22 (statement -> block .)
    READ            reduce using rule 22 (statement -> block .)
    LBRACE          reduce using rule 22 (statement -> block .)


state 23

    (23) statement -> increment .

    RBRACE          reduce using rule 23 (statement -> increment .)
    IDENTIFIER      reduce using rule 23 (statement -> increment .)
    IF              reduce using rule 23 (statement -> increment .)
    WHILE           reduce using rule 23 (statement -> increment .)
    DO              reduce using rule 23 (statement -> increment .)
    WRITE           reduce using rule 23 (statement -> increment .)
    READ            reduce using rule 23 (statement -> increment .)
    LBRACE          reduce using rule 23 (statement -> increment .)
    ELSE            reduce using rule 23 (statement -> increment .)
    FI              reduce using rule 23 (statement -> increment .)


state 24

    (24) statement -> decrement .

    RBRACE          reduce using rule 24 (statement -> decrement .)
    IDENTIFIER      reduce using rule 24 (statement -> decrement .)
    IF              reduce using rule 24 (statement -> decrement .)
    WHILE           reduce using rule 24 (statement -> decrement .)
    DO              reduce using rule 24 (statement -> decrement .)
    WRITE           reduce using rule 24 (statement -> decrement .)
    READ            reduce using rule 24 (statement -> decrement .)
    LBRACE          reduce using rule 24 (statement -> decrement .)
    ELSE            reduce using rule 24 (statement -> decrement .)
    FI              reduce using rule 24 (statement -> decrement .)


state 25

    (25) assignment -> IDENTIFIER . ASSIGN expression SEMICOLON
    (26) increment -> IDENTIFIER . PLUS PLUS SEMICOLON
    (27) decrement -> IDENTIFIER . MINUS MINUS SEMICOLON

    ASSIGN          shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38


state 26

    (28) if_statement -> IF . expression block else_part FI
    (29) if_statement -> IF . expression statement else_part FI
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression LT expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LE expression
    (46) expression -> . expression GE expression
    (47) expression -> . expression NE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . MINUS expression
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . IDENTIFIER
    (55) expression -> . TRUE
    (56) expression -> . FALSE

    MINUS           shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUMBER          shift and go to state 43
    IDENTIFIER      shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 39

state 27

    (33) while_statement -> WHILE . expression LBRACE statements RBRACE
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression LT expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LE expression
    (46) expression -> . expression GE expression
    (47) expression -> . expression NE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . MINUS expression
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . IDENTIFIER
    (55) expression -> . TRUE
    (56) expression -> . FALSE

    MINUS           shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUMBER          shift and go to state 43
    IDENTIFIER      shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 47

state 28

    (34) do_while_statement -> DO . LBRACE statements RBRACE WHILE LPAREN expression RPAREN SEMICOLON

    LBRACE          shift and go to state 48


state 29

    (35) write_statement -> WRITE . expression SEMICOLON
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression LT expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LE expression
    (46) expression -> . expression GE expression
    (47) expression -> . expression NE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . MINUS expression
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . IDENTIFIER
    (55) expression -> . TRUE
    (56) expression -> . FALSE

    MINUS           shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUMBER          shift and go to state 43
    IDENTIFIER      shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 49

state 30

    (36) read_statement -> READ . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 50


state 31

    (5) declaration -> type var_list . SEMICOLON
    (6) var_list -> var_list . COMMA IDENTIFIER
    (7) var_list -> var_list . COMMA IDENTIFIER ASSIGN expression

    SEMICOLON       shift and go to state 51
    COMMA           shift and go to state 52


state 32

    (8) var_list -> IDENTIFIER .
    (9) var_list -> IDENTIFIER . ASSIGN expression

    SEMICOLON       reduce using rule 8 (var_list -> IDENTIFIER .)
    COMMA           reduce using rule 8 (var_list -> IDENTIFIER .)
    ASSIGN          shift and go to state 53


state 33

    (37) block -> LBRACE statements . RBRACE
    (13) statements -> statements . statement
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_while_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (23) statement -> . increment
    (24) statement -> . decrement
    (25) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (28) if_statement -> . IF expression block else_part FI
    (29) if_statement -> . IF expression statement else_part FI
    (33) while_statement -> . WHILE expression LBRACE statements RBRACE
    (34) do_while_statement -> . DO LBRACE statements RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (35) write_statement -> . WRITE expression SEMICOLON
    (36) read_statement -> . READ IDENTIFIER SEMICOLON
    (37) block -> . LBRACE statements RBRACE
    (26) increment -> . IDENTIFIER PLUS PLUS SEMICOLON
    (27) decrement -> . IDENTIFIER MINUS MINUS SEMICOLON

    RBRACE          shift and go to state 54
    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    WRITE           shift and go to state 29
    READ            shift and go to state 30
    LBRACE          shift and go to state 11

    statement                      shift and go to state 35
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    do_while_statement             shift and go to state 19
    write_statement                shift and go to state 20
    read_statement                 shift and go to state 21
    block                          shift and go to state 22
    increment                      shift and go to state 23
    decrement                      shift and go to state 24

state 34

    (1) program -> PROGRAM LBRACE declarations statements RBRACE .

    $end            reduce using rule 1 (program -> PROGRAM LBRACE declarations statements RBRACE .)


state 35

    (13) statements -> statements statement .

    RBRACE          reduce using rule 13 (statements -> statements statement .)
    IDENTIFIER      reduce using rule 13 (statements -> statements statement .)
    IF              reduce using rule 13 (statements -> statements statement .)
    WHILE           reduce using rule 13 (statements -> statements statement .)
    DO              reduce using rule 13 (statements -> statements statement .)
    WRITE           reduce using rule 13 (statements -> statements statement .)
    READ            reduce using rule 13 (statements -> statements statement .)
    LBRACE          reduce using rule 13 (statements -> statements statement .)


state 36

    (25) assignment -> IDENTIFIER ASSIGN . expression SEMICOLON
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression LT expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LE expression
    (46) expression -> . expression GE expression
    (47) expression -> . expression NE expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . MINUS expression
    (51) expression -> . NOT expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . IDENTIFIER
    (55) expression -> . TRUE
    (56) expression -> . FALSE

    MINUS           shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    NUMBER          shift and go to state 43
    IDENTIFIER      shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    expression                     shift and go to state 55

state 37

    (26) increment -> IDENTIFIER PLUS . PLUS SEMICOLON

    PLUS            shift and go to state 56


state 38

    (27) decrement -> IDENTIFIER MINUS . MINUS SEMICOLON

    MINUS           shift and go to state 57


state 39

    (28) if_statement -> IF expression . block else_part FI
    (29) if_statement -> IF expression . statement else_part FI
    (38) expression -> expression . PLUS expression
    (39) expression -> expression . MINUS expression
    (40) expression -> expression . TIMES expression
    (41) expression -> expression . DIVIDE expression
    (42) expression -> expression . EQ expression
    (43) expression -> expression . LT expression
    (44) expression -> expression . GT expression
    (45) expression -> expression . LE expression
    (46) expression -> expression . GE expression
    (47) expression -> expression . NE expression
    (48) expression -> expression . AND expression
    (49) expression -> expression . OR expression
    (37) block -> . LBRACE statements RBRACE
    (16) statement -> . assignment
    (17) statement -> . if_statement
    (18) statement -> . while_statement
    (19) statement -> . do_while_statement
    (20) statement -> . write_statement
    (21) statement -> . read_statement
    (22) statement -> . block
    (23) statement -> . increment
    (24) statement -> . decrement
    (25) assignment -> . IDENTIFIER ASSIGN expression SEMICOLON
    (28) if_statement -> . IF expression block else_part FI
    (29) if_statement -> . IF expression statement else_part FI
    (33) while_statement -> . WHILE expression LBRACE statements RBRACE
    (34) do_while_statement -> . DO LBRACE statements RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (35) write_statement -> . WRITE expression SEMICOLON
    (36) read_statement -> . READ IDENTIFIER SEMICOLON
    (26) increment -> . IDENTIFIER PLUS PLUS SEMICOLON
    (27) decrement -> . IDENTIFIER MINUS MINUS SEMICOLON

    PLUS            shift and go to state 60
    MINUS           shift and go to state 61
    TIMES           shift and go to state 62
    DIVIDE          shift and go to state 63
    EQ              shift and go to state 64
    LT              shift and go to state 65
    GT              shift and go to state 66
    LE              shift and go to state 67
    GE              shift and go to state 68
    NE              shift and go to state 69
    AND             shift and go to state 70
    OR              shift and go to state 71
    LBRACE          shift and go to state 11
    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
    WRITE           shift and go to state 29
    READ            shift and go to state 30

    block                          shift and go to state 58
    statement                      shift and go to state 59
    assignment                     shift and go to state 16
    if_statement                   shift and go to state 17
